# pyga

./: .gitmodules  CMakeLists.txt  README.md  core.py  db.py  res.py  tools.py
src/: ga.cpp  ga.hpp  main.cpp  pyga.cpp
